<resources>
    <string name="app_name">UnitorM2</string>
    <string name="app_version">5.0.0b6</string>
    <string name="ad">ca-app-pub-7873521316289922/7696297430</string>
    <string name="adtest">ca-app-pub-3940256099942544/6300978111</string>
    <string name="per_re_title">Permission Request</string>
    <string name="per_re_content">Unitor needs \'Write to storage (EXTERNAL_WRITE)\' permission. If you don\'t Unitor cna\'t save Unipack!</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="unable_save">You will not be able to save UniPack.</string>
    <string name="setting">Setting</string>
    <string name="importing">Import</string>
    <string name="newPack">New Pack</string>
    <string name="delete">Delete</string>
    <string name="alert_err">Error</string>
    <string name="alert_ok">OK</string>
    <string name="asynk_delete_title">Deleting \n%s\n...</string>
    <string name="alert_message_dunipack">Are you sure delete \'%s\'?</string>
    <string name="alert_title_dunipack">Delete \'%s\'</string>
    <string name="alert_button_dok">delete</string>
    <string name="alert_button_dcancel">cancel</string>
    <string name="pref_category_app">App Setting</string>
    <string name="pref_app_lockon">Turn on display while editing</string>
    <string name="pref_app_lockonOk">Enable</string>
    <string name="pref_app_lockonNo">Disable</string>
    <string name="toast_back">If you want to go back, press \'Back button\' one more.</string>
    <string name="dialog_Make">make</string>
    <string name="dialog_title_newUnipack">Create a new Unipack</string>
    <string name="toast_newUnipack_null">Please fill in all blanks</string>
    <string name="button_selectAll">Select All</string>
    <string name="dialog_title_unipack">Please select a Unipack. (.zip)</string>
    <string name="dialog_title_file">Please select sounds. (.mp3 or .wav)</string>
    <string name="async_unzip_title">Unzipping...</string>
    <string name="async_unzip_message">Unzipping \'%s\'...</string>
    <string name="dialog_unzip_sucT">Unzip \'%s\' Succeed</string>
    <string name="dialog_unzip_sucM">Unzip \'%s\' was successful.</string>
    <string name="dialog_unzip_failT">Unzip \'%s\' Failed</string>
    <string name="dialog_unzip_failM">Unzip \'%s\' was Failed.</string>
    <string name="fragment_button_save">Save</string>
    <string name="toast_save_succeed">Save Succeed</string>
    <string name="toast_save_fail">Save Failed</string>
    <string name="text_add_sound">Add Sounds</string>
    <string name="radio_mode_add">Edit</string>
    <string name="radio_mode_test">Test</string>
    <string name="button_file_select">Add</string>
    <string name="text_file_longClick">If you do \'Long Click\', you can play Sound</string>
    <string name="async_copy_sound_title">Copying Sound Files..</string>
    <string name="async_copy_sound_finish">Finish copy all sound files.</string>
    <string name="btn_add_LED">Add New LED</string>
    <string name="text_current">Location : \'%s\'</string>
    <string name="btn_add">Add</string>
    <string name="check_LED_off">LED OFF</string>
    <string name="check_delete_LED">Delete LED</string>
    <string name="button_edit_another">Edit Another</string>
    <string name="save">Save</string>
    <string name="text_nochain">Please set \'Chain\' in Info tab</string>
    <string name="menu_sound_add">Add</string>
    <string name="menu_sound_delete">Delete</string>
    <string name="menu_sound_play">Play</string>
    <string name="async_load_sound_title">Sounds Loading..</string>
    <string name="spinner_chain">%s chain</string>
    <string name="checkbox_delete_sound">Delete Sound</string>
    <string name="saveall">Save All</string>
    <string name="save_info">Save Info</string>
    <string name="save_keySound">Save keySound</string>
    <string name="save_KeyLED">Save keyLED</string>
    <string name="alert_recover">Restore \'%s\'</string>
    <string name="alert_die_M">\'%s\' was not saved before. Do you want to restore it? If you don\'t, your file which you edited before will disappear forever.</string>
    <string name="alert_die_OK">Restore</string>
    <string name="alert_die_NO">No</string>
    <string name="edit_repeattime">Repeat Time(Not required):</string>
    <string name="edit_wormhole">Wormhole(Not required):</string>
    <string name="async_duplicate_sound_title">Reading Sounds Info..</string>
    <string name="toast_sound_noselect">Please select a button</string>
    <string name="dialog_sound_add">Change</string>
    <string name="async_file_deleteS">Delete Sound Files</string>
    <string name="async_file_deleteL">Delete LED Files</string>
    <string name="async_led_content">Read LEDs...</string>
    <string name="menu_led_play">Play</string>
    <string name="menu_led_select">Select</string>
    <string name="menu_led_delete">Delete</string>
    <string name="async_led_initial">Get LEDs..</string>
    <string name="async_led_initial_delete">Remove Previous LEDs..</string>
    <string name="text_led_seek_explain">You can select a Frame when you move this bar</string>
    <string name="text_select_led">Select led</string>
    <string name="dialog_title_delete_frame">Delete \'%s\'?</string>
    <string name="dialog_button_frame_delete">Delete</string>
    <string name="alert">This is beta version. Led play function is developing now. Please wait a little time, please.</string>
    <string name="dialog_delete_led">Do you really delete this file? If you click \'delete\', it won\'t be able to restore.</string>
    <string name="async_save_led">Saving LEDs..</string>
    <string name="async_delete_unipack">Delete Unipack \'%s\'..</string>
    <string name="menu_actionbar_export_unipack">Export Unipack</string>
    <string name="dialog_export_finish_suc">Export Finish</string>
    <string name="dialog_export_finish_fail">Export Fail</string>
    <string name="dialog_export_mes_suc">Export to \'%s\'</string>
    <string name="dialog_export_button_go">show</string>
    <string name="dialog_export_button_ok">ok</string>
    <string name="pre_contact">Contact to Developer</string>
    <string name="pre_contact_sum">Send an email to Developer (jckim0307@gmail.com)</string>
    <string name="pre_categoty_info">App Info</string>
    <string name="alert_restore">Restore \'%s\'?</string>
    <string name="alert_restore_msg">The app has been terminated abnormally before. You can restore \'%s\'. If you press \'no\', you cat\'t restore anymore.</string>
    <string name="alert_restore_ok">restore</string>
    <string name="alert_restore_no">no</string>
    <string name="pre_category_opensource">Opensource License</string>
    <string name="pre_category_app">App Setting</string>
    <string name="pre_check_display_t">Keep the Display On</string>
    <string name="pre_check_dis_o_s">Keep the display on when you edit the Unipack.</string>
</resources>