<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:padding="5dp"
    android:orientation="vertical"
    android:layout_height="match_parent" android:background="@color/colorLayoutBackground">

    <com.google.android.gms.ads.AdView
        fab:adUnitId="ca-app-pub-7873521316289922/7696297430"
        android:id="@+id/admob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fab:adSize="BANNER"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycle_main_unipack"></android.support.v7.widget.RecyclerView>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_labelsPosition="left"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:fab_addButtonColorPressed="@color/colorAccentDark"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab_new"
                fab:fab_title="@string/newPack"
                fab:fab_icon="@drawable/outline_add_white_24"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_colorPressed="@color/colorAccentDark"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab_import"
                fab:fab_title="@string/importing"
                fab:fab_icon="@drawable/outline_folder_white_24"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_colorPressed="@color/colorAccentDark"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab_setting"
                fab:fab_title="@string/setting"
                fab:fab_icon="@drawable/outline_settings_white_24"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/colorAccent"
                fab:fab_colorPressed="@color/colorAccentDark"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

</LinearLayout>